--- a/books_app/static/css/style2.css
+++ b/books_app/static/css/style2.css
@@ -38,3 +38,27 @@
     text-align: right;
     
 }
+
+.book_details{
+    margin: 5px 5px;
+}
+
+.like{
+    font-size: 10pt;
+}
+
+#big-header{
+    margin-top: 20px;
+    height: 40px;
+    font-size: 20pt;
+}
+
+#submit_button{
+    display: flex;
+    justify-content: space-between;
+}
+
+#delete_book{
+    text-decoration: none;
+    color: black;
+}
